<resources>
    <string name="app_name">DentalCare</string>
    <string name="txt_bem_vindo">Bem-Vindo!</string>
    <string name="txt_produtos">Produtos</string>
    <string name="txt_login">Login</string>
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="txt_itens_disponiveis">Itens Disponíveis</string>
    <string name="txt_servicos">Serviços</string>
    <string name="txt_marcacoes">Marcações</string>
    <string name="txt_marcarConsulta">Marcar Consulta</string>
    <string name="txt_lista_marcacoes">Lista das Marcações</string>
    <string name="txt_carrinho">Carrinho</string>
    <string name="txt_faturas">Faturas</string>
    <string name="txt_compras">Compras</string>
    <string name="txt_dados_utente">Dados do Utente</string>
    <string name="txt_utente">Utente</string>
    <string name="txt_diagnosticos">Diagnósticos</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_telefone">Telefone</string>
    <string name="txt_morada">Morada</string>
    <string name="txt_nif">NIF</string>
    <string name="txt_codigo_postal">Código-Postal</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_password">Password</string>
    <string name="txt_data">Data:</string>
    <string name="txt_descricao_diagnostico">Descrição do Diagnóstico:</string>
    <string name="txt_subtotal">SubTotal:</string>
    <string name="txt_n_fatura">NºFatura</string>
    <string name="txt_ivatotal">Iva Total:</string>
    <string name="txt_estado">Estado:</string>
    <string name="txt_valortotal">Valor Total:</string>
    <string name="txt_hora">Hora:</string>
    <string name="txt_servico">Serviço</string>
    <string name="txt_medico">Médico</string>
    <string name="txt_nome_produto">Nome do Produto:</string>
    <string name="txt_nome_servico">Nome do Serviço</string>
    <string name="txt_descricao_produto">Descrição do Produto</string>
    <string name="txt_precounitario_produto">Preço Unitário do Produto</string>
    <string name="txt_descricao_servico">Descrição do Serviço</string>
    <string name="txt_taxa_iva">Taxa IVA</string>
    <string name="txt_preco_servico">Preço do Serviço s/IVA</string>
    <string name="txt_adicionar_ip">Adicionar IP do Servidor</string>
    <string name="et_ip">IP do Servidor</string>
    <string name="txt_username_invalido">O username é inválido\n</string>
    <string name="txt_password_invalida">A password está incorreta\n\n</string>
    <string name="sem_ligacao">Sem ligação à internet</string>
    <string name="ndOpen">open</string>
    <string name="ndClose">close</string>
    <string name="txt_null">null\n</string>
    <string name="txt_nfatura">Fatura nº:</string>
    <string name="txt_data_consulta">Data da Consulta:</string>
    <string name="txt_definicoes">Definições\n</string>
    <string name="txt_logout">Logout\n</string>
    <string name="txt_adicionar_carrinho">Adicionar ao Carrinho</string>
    <string name="emStock">Em Stock</string>
    <string name="foraStock">Fora de Stock</string>
    <string name="txt_stock">Estado do Produto</string>
    <string name="quantidade_stock_invalido">Quantidade Stock Invalido</string>
    <string name="txt_hora_consulta">Hora da Consulta:</string>
    <string name="idlinhafatura">ID:</string>
    <string name="quantidadelinhafatura">Quantidade:</string>
    <string name="produtoLinhaFatura">Produto:</string>
    <string name="servi_oLinhaFatura">Serviço:</string>
    <string name="valor_totalLinhaFatura">Valor total:</string>
    <string name="a_carregar_produtos">A carregar Produtos</string>
    <string name="a_carregar_servicos">A Carregar Servicos</string>
    <string name="menu_pesquisa">menu pesquisa\n</string>
    <string name="txt_estado_marcacao">Estado:</string>
    <string name="txt_descricao">Descrição:</string>
    <string name="txt_quantidade_produto_carrinho">Quantidade:</string>
    <string name="txt_valor_total_produto_carrinho">Valor total:</string>
    <string name="ip_servidor">172.22.21.201</string>

</resources>