<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".ConfigActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        />

    <EditText
        android:id="@+id/etConfiguracaoServidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/ip_servidor"
        android:hint="@string/et_ip"
        android:inputType="textPersonName"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.04"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:onClick="onClickSendIP"
        android:text="@string/txt_adicionar_ip" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        />

</LinearLayout>