<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerfilFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/person"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:ems="10"
            android:text="@string/txt_nome" />

        <EditText
            android:id="@+id/etTelefone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:ems="10"
            android:text="@string/txt_telefone" />

        <EditText
            android:id="@+id/etMorada"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:ems="10"
            android:text="@string/txt_morada" />

        <EditText
            android:id="@+id/etNif"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:ems="10"
            android:text="@string/txt_nif" />

        <EditText
            android:id="@+id/etCodigoPostal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:ems="10"
            android:text="@string/txt_codigo_postal" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="90dp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:focusable="true"
            app:backgroundTint="@color/purple_500"
            android:clickable="true"
            android:src="@drawable/ic_action_save"
            android:tint="@color/white"/>

    </LinearLayout>

</LinearLayout>

