<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".DetalhesProdutosOfflineActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProdutoOffline"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                app:srcCompat="@drawable/dentalcare_logo" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />
            <TextView
                android:id="@+id/etNomeProduto"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/txt_nome_produto" />

            <TextView
                android:id="@+id/etDescricaoProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_descricao_produto" />

            <TextView
                android:id="@+id/etPrecoUnitarioProduto"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/txt_precounitario_produto" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
