<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".DetalhesCarrinhosActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProduto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                app:srcCompat="@drawable/dentalcare_logo" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"
                android:textStyle="bold"
                android:text="@string/txt_nome_produto" />

            <TextView
                android:id="@+id/tvNomeProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:textStyle="bold"
                android:text="@string/txt_descricao_produto" />

            <TextView
                android:id="@+id/tvDescricaoProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"
                android:textStyle="bold"
                android:text="@string/txt_precounitario_produto" />

            <TextView
                android:id="@+id/tvPrecoUnitarioProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
